--- a/app/src/main/res/layout/fragment_person_circle_detail.xml
+++ b/app/src/main/res/layout/fragment_person_circle_detail.xml
@@ -10,6 +10,80 @@
         android:layout_width="match_parent"
         android:id="@+id/fragment_person_circle_detail_scrollview"
         android:layout_height="match_parent">
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:padding="@dimen/phone_apadding"
+            android:layout_height="wrap_content"
+            >
+            <ImageView
+                android:id="@+id/school_friend_item_headicon_img"
+                android:layout_width="@dimen/phone_head_length"
+                android:layout_height="@dimen/phone_head_length"
+                />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:paddingStart="@dimen/phone_apadding"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/school_friend_item_name_text"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="@android:color/holo_blue_dark"
+                        android:layout_gravity="center_horizontal" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/school_friend_item_label_text"
+                        android:paddingStart="10dp"
+                        android:layout_gravity="bottom"
+                        />
+                </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/phone_apadding"
+                    android:textColor="@android:color/black"
+                    android:id="@+id/school_friend_item_content"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/holo_blue_dark"
+                    android:id="@+id/school_friend_item_publish_location"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="@dimen/phone_apadding"
+                    android:id="@+id/school_friend_item_publish_date"
+                    />
+                <ImageView
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginTop="-32dp"
+                    android:id="@+id/school_friend_item_com_img"
+                    android:layout_gravity="right"
+                    android:src="@drawable/ic_menu_compose"
+                    />
+                <com.nju.View.NonScrollableListView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#F5F5F5"
+                    android:divider="@null"
+                    android:dividerHeight="0dp"
+                    android:id="@+id/school_friend_item_listView"
+                    />
+            </LinearLayout>
+        </LinearLayout>
     </ScrollView>
     <include layout="@layout/emotion_input"/>
     <include layout="@layout/emotion_comment"/>
