--- a/app/src/main/res/layout/fragment_recommend_work_item_detail.xml
+++ b/app/src/main/res/layout/fragment_recommend_work_item_detail.xml
@@ -1,11 +1,23 @@
+<FrameLayout
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:background="@android:color/white"
-
-
     xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,11 +42,26 @@
         android:layout_below="@+id/recommend_work_item_detail_title"
         android:layout_alignStart="@+id/recommend_work_item_detail_title" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/light_blue"
+            android:paddingStart="@dimen/phone_apadding"
+            android:paddingEnd="@dimen/phone_apadding"
+            android:id="@+id/fragment_recommend_work_item_detail_email"
+            android:layout_below="@+id/recommend_work_item_detail_detail"
+            android:layout_alignParentStart="true" />
+
+    </LinearLayout>
+    </ScrollView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:background="@drawable/gray_line_bg"
         android:layout_alignParentBottom="true"
         android:gravity="center"
+        android:id="@+id/re_work_item_detail_layout"
         android:layout_height="60dp">
 
         <TextView
@@ -43,7 +70,6 @@
             android:gravity="center"
             android:textColor="@android:color/black"
             android:layout_height="wrap_content"
-
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/yingping"
             android:id="@+id/re_work_item_yinpin_tv" />
@@ -55,7 +81,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/zixun"
-            android:id="@+id/textView17" />
+            android:id="@+id/re_work_item_ask_tv" />
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -64,17 +90,28 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/collect"
-            android:id="@+id/textView18" />
+            android:id="@+id/re_work_item_collect" />
     </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/light_blue"
-        android:paddingStart="@dimen/phone_apadding"
-        android:paddingEnd="@dimen/phone_apadding"
-        android:id="@+id/fragment_recommend_work_item_detail_email"
-        android:layout_below="@+id/recommend_work_item_detail_detail"
-        android:layout_alignParentStart="true" />
 </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:id="@+id/re_work_item_detail_hide_layout"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_alignParentTop="true"
+            android:id="@+id/re_work_item_detail_gray_layout"
+            android:background="@android:color/transparent"
+            android:layout_height="match_parent"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/gray_line_bg"
+            android:layout_height="60dp">
+            <com.nju.View.SchoolFriendEditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+    </RelativeLayout>
+</FrameLayout>
