--- a/app/src/main/res/layout/fragment_alumni_voice_item.xml
+++ b/app/src/main/res/layout/fragment_alumni_voice_item.xml
@@ -1,11 +1,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.nju.fragment.AlumniVoiceItemFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent"
-        android:id="@+id/alumni_voice_item_test"
-        android:layout_height="match_parent"
-         />
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.nju.fragment.AlumniVoiceItemFragment">
+    <ListView
+        android:layout_width="match_parent"
+        android:paddingTop="@dimen/phone_apadding"
+        android:paddingStart="@dimen/phone_apadding"
+        android:paddingEnd="@dimen/phone_apadding"
+        android:id="@+id/alumni_voice_item_list"
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
